Fix checkstyleMain errors